# SkyRL-ZeroKL

./: ZEROKL_DIFF_HANDOFF.md  ZEROKL_FINDINGS.md  ZEROKL_SKYRL_INTEGRATION.md  ZEROKL_STATUS.md  ZEROKL_WORKLOG.md  pyproject.toml
examples/zerokl/: README.md  dapo_zerokl.py  layerwise_mtp_check.py  run_dapo_zerokl_qwen3_4b.sh  run_megatron_dapo_mimo_7b_rl.sh  run_megatron_dapo_mimo_7b_zerokl.sh  run_megatron_dapo_mimo_7b_zerokl_debug.sh  run_megatron_dapo_mimo_7b_zerokl_nightly.sh  run_zerokl_diag_1gpu.sh  run_zerokl_diag_1gpu_nochunk.sh  run_zerokl_diag_1gpu_probe.sh  run_zerokl_tune_mimo.sh  wrapper_path_check.py
examples/zerokl/nightly/: README.md  RESULT_dapo_loop.txt  attn_weight_diff_harness.py  bare_vs_f16_harness.py  batched_parity_test.py  dapo_zerokl_nightly.py  megatron_local_forward.py  mimo_megatron_vllm.py  mimo_parity_test.py  patch_megatron_bridge_no_te.py  prod_local_build.py  repackage_wheels.py  rope_weight_diff_harness.py  skyrl_engine_parity_test.py  varlen_backend.py  weight_diff_harness.py
examples/zerokl/nightly/wandb/: latest-run
examples/zerokl/nightly/wandb/run-20260630_041934-aecyfpuw/: run-aecyfpuw.wandb
examples/zerokl/nightly/wandb/run-20260630_041934-aecyfpuw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
examples/zerokl/nightly/wandb/run-20260630_042302-9nb0mor1/: run-9nb0mor1.wandb
examples/zerokl/nightly/wandb/run-20260630_042302-9nb0mor1/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
examples/zerokl/nightly/wandb/run-20260630_042635-rrxw4gou/files/: wandb-metadata.json
examples/zerokl/nightly/wandb/run-20260630_043310-m849bnyu/files/: wandb-metadata.json
examples/zerokl/nightly/wandb/run-20260630_045414-1h7a9so4/: run-1h7a9so4.wandb
examples/zerokl/nightly/wandb/run-20260630_045414-1h7a9so4/files/: config.yaml  wandb-metadata.json  wandb-summary.json
skyrl/backends/skyrl_train/inference_engines/: ray_wrapped_inference_engine.py  utils.py
skyrl/backends/skyrl_train/inference_engines/vllm/: vllm_engine.py
skyrl/backends/skyrl_train/inference_servers/: vllm_worker.py
skyrl/backends/skyrl_train/workers/: worker_utils.py
skyrl/backends/skyrl_train/workers/megatron/: megatron_model_wrapper.py  megatron_worker.py
skyrl/backends/skyrl_train/zerokl/: README.md  __init__.py  _selftest.py  gptmodel_vllm.py  megatron_flash_attn.py  megatron_patches.py  megatron_varlen_attn.py  native_weight_sync.py  no_te_guard.py  varlen_backend.py  vllm_patches.py
skyrl/train/: trainer.py
skyrl/train/utils/: utils.py
